# RSREU

./: README.md
Compitational_algorithms/Lab_2/: Lab2_BA.py
Compitational_algorithms/Lab_3/: Lab3_BA.py
Compitational_algorithms/Lab_4/: Lab4_BA.py
Compitational_algorithms/Lab_5/: Lab_5_BA.py
Computer_Graphics/: LAB_2.1_KG.py  LAB_7_KG.py  LAB_8_KG.py  Lab_10_KG.py  Lab_5_BA.py  Lab_9_KG.py
Data_Types_And_Structures/Algorithms_Based_On_Strings/: A. Префикс-функция.py  B. КМП (+ хеши).py  B. КМП(+ z-функция).py  B. КМП(+префикс функция).py  C. Строчки.py  D. Циклическая строка.py  E. Z-Функция.py  F. Хеширование с удалением.py  G. Подпалиндромы.py  H. Максимальные подпалиндромы.py
Data_Types_And_Structures/Binary_Search/: A. Двоичный поиск.py  B. Приближенный двоичный поиск.py  C. Кв корень и кв квадрат.py  D. Корень кубического уравнения.py  E. Коровы - в стойла.py  F. Очень легкая задача.py  G. Веревочка.py  H. Дипломы.py
Data_Types_And_Structures/Dijkstra_Floyd/: A. Дейкстра.py  B. Алгоритм Дейкстры за mLogN.py  C. Восстановление пути.py  D. Заправки.py  E. Автобусы.py  F. Флойд вместо Дейкстры.py  G. Самый короткий путь.py  H. Транзитивное замыкание.py  (+1 more)
OOP_Car_Game/: .gitignore  CMakeLists.txt
OOP_Car_Game/include/Controller/: AboutController.h  GameController.h  MainMenuController.h
OOP_Car_Game/include/Model/: Car.h  GameModel.h  Obstacle.h  Road.h
OOP_Car_Game/include/View/: AboutView.h  GameView.h  MainMenuView.h
OOP_Car_Game/src/: main.cpp
OOP_Car_Game/src/Controller/: AboutController.cpp  AboutController.h  GameController.cpp  GameController.h  MainController.cpp  MainController.h  MainMenuController.cpp  MenuController.cpp  MenuController.h
OOP_Car_Game/src/Model/: Car.cpp  Car.h  GameModel.cpp  GameModel.h  Obstacle.cpp  Obstacle.h  Road.cpp  Road.h
OOP_Car_Game/src/View/: AboutView.cpp  AboutView.h  GameView.cpp  GameView.h  MainMenuView.cpp  MainMenuView.h  Window.cpp  Window.h
Probability theory/: Домашняя работа к 1.10.2025.ipynb  Домашняя работа к 27.10.2025.xlsx  Домашняя работа к 7.10.2025.ipynb  Домашняя работа.ipynb  Игра в тир.py
(+78 files in other folders)
